<resources>
    <string name="app_name">MoodTracker</string>
    <string name="smiley_happy">Smiley Happy</string>
    <string name="note_add_button">Note add button</string>
    <string name="history_button">History button</string>
    <string name="a_week_ago">Il y a une semaine</string>
    <string name="six_days_ago">Il y a six jours</string>
    <string name="five_days_ago">Il y a cinq jours</string>
    <string name="four_days_ago">Il y a quatre jours</string>
    <string name="three_days_ago">Il y a trois jours</string>
    <string name="two_days_ago">Avant-hier</string>
    <string name="yesterday">Hier</string>
    <string name="share">Partager</string>
    <string name="very_bad">\ très mauvaise</string>
    <string name="bad">\ mauvaise</string>
    <string name="normal">\ normale</string>
    <string name="happy">\ heureuse</string>
    <string name="very_happy">\ très heureuse</string>
    <string name="comment">Commentaire</string>
    <string name="OK">Valider</string>
    <string name="cancel">Annuler</string>
    <string name="here_is_why">\nVoilà pourquoi :\ </string>
    <string name="share_hello_first_part">Hello : Je suis aujourd\'hui d\'humeur</string>
    <string name="share_hello_second_part">\ !</string>
</resources>
