<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_sage"
    tools:context=".controller.MainActivity">

    <ImageView
        android:id="@+id/activity_main_image_smiley"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/smiley_happy"
        android:src="@drawable/smiley_happy" />

    <ImageButton
        android:id="@+id/activity_main_note_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:contentDescription="@string/note_add_button"
        android:src="@drawable/ic_note_add_black"/>

    <ImageButton
        android:id="@+id/activity_main_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:contentDescription="@string/history_button"
        android:src="@drawable/ic_history_black" />

    <ImageButton
        android:id="@+id/activity_main_share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/share"
        android:background="null"
        android:src="@drawable/ic_share_black_24dp"/>

</RelativeLayout>