<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".controller.HistoryActivity"
    android:id="@+id/history_activity_constraint_layout">

    <TextView
        android:text="@string/a_week_ago"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:id="@+id/history_activity_week_ago_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1428"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/light_sage"
        android:paddingEnd="20dp"/>

    <TextView
        android:text="@string/six_days_ago"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:id="@+id/history_activity_six_days_ago_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1428"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintTop_toBottomOf="@id/history_activity_week_ago_TV"
        android:background="@color/light_sage"
        android:paddingEnd="20dp"/>

    <TextView
        android:text="@string/five_days_ago"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:id="@+id/history_activity_five_days_ago_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1428"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintTop_toBottomOf="@id/history_activity_six_days_ago_TV"
        android:background="@color/light_sage"
        android:paddingEnd="20dp"/>

    <TextView
        android:text="@string/four_days_ago"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:id="@+id/history_activity_four_days_ago_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1428"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintTop_toBottomOf="@id/history_activity_five_days_ago_TV"
        android:background="@color/light_sage"
        android:paddingEnd="20dp"/>

    <TextView
        android:text="@string/three_days_ago"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:id="@+id/history_activity_three_days_ago_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1428"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintTop_toBottomOf="@id/history_activity_four_days_ago_TV"
        android:background="@color/light_sage"
        android:paddingEnd="20dp"/>

    <TextView
        android:text="@string/two_days_ago"
        android:maxLines="1"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:id="@+id/history_activity_two_days_ago_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1428"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintTop_toBottomOf="@id/history_activity_three_days_ago_TV"
        android:background="@color/light_sage"
        android:paddingEnd="20dp"/>

    <TextView
        android:text="@string/yesterday"
        android:textSize="12sp"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:id="@+id/history_activity_yesterday_TV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1428"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintTop_toBottomOf="@id/history_activity_two_days_ago_TV"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/light_sage"
        android:paddingEnd="20dp"/>

</android.support.constraint.ConstraintLayout>